--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -22,11 +22,12 @@
     "@angular/compiler-cli": "^6.0.3",
     "@angular/core": "^6.0.5",
     "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
+    "@angular/http": "^7.2.13",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.1.1",
+    "@types/npm": "^2.0.30",
     "ajv": "^6.5.1",
     "ajv-keywords": "^3.2.0",
     "body-parser": "^1.18.3",
@@ -35,7 +36,7 @@
     "cors": "^2.8.4",
     "enhanced-resolve": "^4.0.0",
     "express": "^4.16.3",
-    "hoek": "^5.0.3",
+    "hoek": "^6.1.3",
     "jquery": "^3.3.1",
     "ng2-slim-loading-bar": "^4.0.0",
     "path": "^0.12.7",
@@ -44,6 +45,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
+    "sequelize": "^5.3.5",
     "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
@@ -80,8 +82,8 @@
     "express"
   ],
   "engines": {
-    "node": "8.11.2",
-    "npm": "6.1.0"
+    "node": "10.6.0",
+    "npm": "6.5.0"
   },
-   "license": "MIT"
+  "license": "MIT"
 }
